@@ -131,18 +131,21 @@ class BrassPostList : public LeafPostList {
 	 */
 	Xapian::Internal::RefCntPtr<const BrassDatabase> this_db;
 
-	/// Whether we've started reading the list yet.
-	bool have_started;
-
 	/// The position list object for this posting list.
 	BrassPositionList positionlist;
 
-    private:
-	/// Cursor pointing to current chunk of postlist.
-	AutoPtr<BrassCursor> cursor;
+	/// Whether we've started reading the list yet.
+	bool have_started;
 
+    private:
 	/// True if this is the last chunk.
 	bool is_last_chunk;
+
+	/// Whether we've run off the end of the list yet.
+	bool is_at_end;
+
+	/// Cursor pointing to current chunk of postlist.
+	AutoPtr<BrassCursor> cursor;
 
 	/// The first document id in this chunk.
 	Xapian::docid first_did_in_chunk;
@@ -161,9 +164,6 @@ class BrassPostList : public LeafPostList {
 
 	/// The wdf of the current document.
 	Xapian::termcount wdf;
-
-	/// Whether we've run off the end of the list yet.
-	bool is_at_end;
 
 	/// The number of entries in the posting list.
 	Xapian::doccount number_of_entries;
